day3/another-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: another-test-pod
  namespace: np-test
  labels:
    app: client
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ['sh', '-c', 'while true; do sleep 5; done']
