day3/configmap-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-volume-pod
spec:
  volumes:
    - name: cm-vol
      configMap:
        name: my-configmap
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "while true; do sleep 3600; done"]
      volumeMounts:
        - name: cm-vol
          mountPath: /etc/config
