day3/load-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generator
spec:
  replicas: 1 
  selector:
    matchLabels:
      run: load-generator
  template:
    metadata:
      labels:
        run: load-generator
    spec:
      containers:
      - name: busy-guy
        image: busybox:1.28
        command: ['sh', '-c', 'while sleep 0.01; do wget -q -O- http://php-apache; done']
