day3/nginx-nonroot-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-nonroot-pod
spec:
  securityContext:
    runAsNonRoot: true
  containers:
  - name: nginx
    image: nginx:1.19.1
    ports:
    - containerPort: 80
