day3/nginx-stfs.yaml
apiVersion: v1
kind: Service
metadata:
  name: stfs-service
spec:
  clusterIP: None
  selector:
    app: stfs
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-stfs
  labels:
    app: stfs
spec:
  serviceName: stfs-service
  replicas: 2
  selector:
    matchLabels:
      app: stfs
  template:
    metadata:
      name: stfs
      labels:
        app: stfs
    spec:
      containers:
      - name: stfs-container
        image: nginx
        ports:
          - containerPort: 80
